--- a/content.html
+++ b/content.html
@@ -74,13 +74,17 @@
         .back-button:hover {
             background-color: #e03e00;
         }
+
+        .paw-print {
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="profile-container">
         <img src="your-image-file.jpg" alt="Profile Image" class="profile-image">
         <div class="nutrition-tag">
-            <h2>Nutrition Facts</h2>
+            <h2>Cat Nutrition Facts</h2>
             <p>Calories: <span class="editable" contenteditable="true">Infinite cuddles</span></p>
             <p>Fat: <span class="editable" contenteditable="true">20g of fluff</span></p>
             <p>Carbohydrates: <span class="editable" contenteditable="true">15g of curiosity</span></p>
@@ -88,7 +92,7 @@
             <p>Vitamins: <span class="editable" contenteditable="true">50mg of mischief</span></p>
             <p>Minerals: <span class="editable" contenteditable="true">25mg of catnip</span></p>
         </div>
-        <a href="index.html" class="back-button">Back</a>
+        <a href="index.html" class="back-button">Back <span class="paw-print">🐾</span></a>
     </div>
 </body>
 </html>
