--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         .buy-now-button:hover {
             background-color: #e03e00;
         }
+
+        .paw-print {
+            margin-left: 10px;
+        }
     </style>
 </head>
 <body>
@@ -57,8 +61,9 @@
     <div class="video-container">
         <video autoplay loop muted>
             <source src="your-video-file.mp4" type="video/mp4">
+            Your browser does not support the video tag.
         </video>
     </div>
-    <a href="content.html" class="buy-now-button">BUY NOW</a>
+    <a href="content.html" class="buy-now-button">BUY NOW <span class="paw-print">🐾</span></a>
 </body>
 </html>
