--- a/content.html
+++ b/content.html
@@ -84,7 +84,7 @@
     <div class="profile-container">
         <img src="your-image-file.jpg" alt="Profile Image" class="profile-image">
         <div class="nutrition-tag">
-            <h2>Cat Nutrition Facts</h2>
+            <h2>Nutrition Facts</h2>
             <p>Calories: <span class="editable" contenteditable="true">Infinite cuddles</span></p>
             <p>Fat: <span class="editable" contenteditable="true">20g of fluff</span></p>
             <p>Carbohydrates: <span class="editable" contenteditable="true">15g of curiosity</span></p>
